# tensorism-gen

./: Cargo.toml  README.md
src/: assert.rs  inspection.rs  lib.rs  parsing.rs  sequentialization.rs  types.rs
src/model/: header.rs  lambda.rs  mod.rs
tests/: make_tests.rs  smoke.rs
