[package]
name = "tensorism-gen"
version = "0.1.0"
authors = ["Eddy Cizeron <eddy.cizeron@shift-technology.com>"]
edition = "2018"

[lib]
proc-macro = true

[registries]
local = { index = "..\\tensorism" }

[dependencies]
"syn" = "1.0.92"
"quote" = "1.0.18"
"proc-macro2" = "1.0"
"tensorism" = { version = "*", path = "..\\tensorism" }
