[package]
name = "tensorism-gen"
version = "0.1.0"
authors = ["Eddy Cizeron <eddy.cizeron@shift-technology.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "array", "multidimensional"]
categories = ["data-structures", "science"]
description = "Multidimensional arrays with bounds included in the type system."
documentation = "https://docs.rs/tensorism-gen"
repository = "https://github.com/contactomorph/tensorism-gen"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
"syn" = "1.0.92"
"quote" = "1.0.18"
"proc-macro2" = "1.0"
"tensorism" = "0.1.0"
