[package]
name = "tensorism-gen"
version = "0.1.0"
authors = ["Eddy Cizeron <eddy.cizeron@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["tensor", "array", "multidimensional"]
categories = ["data-structures", "science"]
description = "Multidimensional arrays with bounds included in the type system."
documentation = "https://docs.rs/tensorism"
repository = "https://github.com/contactomorph/tensorism"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
"syn" = { version = "2.0", features = ["full"]}
"quote" = "1.0"
"proc-macro2" = "1.0"
"phf" = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
ndarray = "0.16.1"